# embdebug

./: CMakeLists.txt  LICENSE  LICENSE.MIT  README.md
.github/workflows/: testing.yml
.jenkins/: fulltest.Jenkinsfile  jobgenerators.groovy  linux.Jenkinsfile  macos.Jenkinsfile  style.Jenkinsfile  windows.Jenkinsfile
.jenkins/docker/: linux-centos7-clang.dockerfile  linux-centos7-gcc5.dockerfile  linux-centos7-gcc6.dockerfile  linux-centos7-gcc7.dockerfile  linux-ubuntu1604-clang.dockerfile  linux-ubuntu1604-gcc.dockerfile  linux-ubuntu1804-clang.dockerfile  linux-ubuntu1804-gcc.dockerfile
cmake/: compiler_utils.cmake
docs/: Building.rst  Contributing.rst  Internals.rst  Makefile  Overview.rst  Porting.rst  RSP.rst  Ri5cyTutorial.rst  Running.rst  Testing.rst  conf.py  frontpage.dox  index.rst  make.bat
docs/_themes/embdebug-theme/: layout.html
docs/_themes/embdebug-theme/static/: embdebug-theme.css_t
include/embdebug/: ByteView.h  CMakeLists.txt  Compat.h  Gdbserver_compat.h  ITarget.h  Init.h  MemMap.h  RegisterSizes.h  Timeout.h  TraceFlags.h  Types.h  Utils.h  config.h.in
lib/server/: AbstractConnection.cpp  AbstractConnection.h  CMakeLists.txt  GdbServer.cpp  GdbServer.h  Init.cpp  Init.h  Ptid.cpp  RspConnectionUnix.cpp  RspConnectionWin32.cpp  RspPacket.cpp  RspPacket.h  StreamConnection.cpp  StreamConnection.h  SyscallReplyPacket.h  Timeout.cpp  Timeout.h  TraceFlags.cpp  TraceFlags.h  Utils.cpp  Utils.h  VContActions.cpp  VContActions.h
lib/targetsupport/: CMakeLists.txt  ITarget.cpp
server/: AbstractConnection.cpp  AbstractConnection.h  CMakeLists.txt  GdbServer.cpp  GdbServer.h  ITarget.cpp  Init.cpp  MemMap.cpp  MpHash.cpp  MpHash.h  Ptid.cpp  Ptid.h  RspConnection.cpp  RspConnection.h  RspConnectionUnix.cpp  RspConnectionWin32.cpp  RspPacket.cpp  RspPacket.h  StreamConnection.cpp  StreamConnection.h  SyscallReplyPacket.h  Timeout.cpp  TraceFlags.cpp  Utils.cpp  VContActions.cpp  VContActions.h  main2.cpp  main2.h  make-version.sh
targets/: CMakeLists.txt
targets/dummytarget/: CMakeLists.txt  dummytarget.cpp
targets/emptytarget/: CMakeLists.txt  emptytarget.cpp
test/: CMakeLists.txt  StubTarget.h  TestAbstractConnection.cpp  TestDebugServer.cpp  TestGdbServer.cpp  TestGdbServerRSP.cpp  TestPtid.cpp  TestRspPacket.cpp  TestUtils.cpp
tools/: CMakeLists.txt  Driver.cpp
tools/driver/: CMakeLists.txt  Driver.cpp
tools/dummytarget/: CMakeLists.txt  dummytarget.cpp
